--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,4 +1,5 @@
 .item {
+  position: relative;
   display: flex;
   align-items: center;
   width: 350px;
@@ -16,10 +17,11 @@
 }
 
 .status {
-  flex-shrink: 0;
-  width: 30px;
-  height: 30px;
-  margin-right: 20px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 15px;
+  height: 15px;
 
   border-radius: 50%;
 }
