--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  width: 350px;
-  height: 100px;
+  width: 400px;
+  min-height: 100px;
   margin: 0 auto;
   padding: 20px;
 
