--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -36,12 +36,12 @@
 
   font-size: 14px;
   font-style: normal;
-  color: grey;
+  color: dimgray;
 }
 
 .location {
   font-size: 16px;
-  color: gray;
+  color: dimgray;
 }
 
 .stats {
@@ -49,7 +49,7 @@
   align-items: center;
   justify-content: center;
 
-  border-top: 1px solid gray;
+  border-top: 1px solid lightgray;
   background-color: ghostwhite;
 }
 
@@ -65,13 +65,13 @@
 }
 
 .stats li:not(:last-child) {
-  border-right: 1px solid grey;
+  border-right: 1px solid lightgray;
 }
 
 .label {
   margin-bottom: 5px;
 
-  color: gray;
+  color: dimgray;
 }
 
 .quantity {
