--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,7 +1,7 @@
 .transactionHistory {
   width: 100%;
 
-  border: 2px solid cornflowerblue;
+  border: 2px solid dimgray;
   border-collapse: collapse;
 
   text-transform: capitalize;
@@ -12,16 +12,16 @@ thead {
   border-radius: 10px;
 
   color: #fff;
-  background-color: cornflowerblue;
+  background-color: dimgray;
 }
 
 tbody {
   text-align: center;
-  border: 2px solid cornflowerblue;
+  border: 2px solid dimgray;
 }
 
 tbody td:not(:last-child) {
-  border-right: 2px solid cornflowerblue;
+  border-right: 2px solid dimgray;
 }
 
 tr:nth-child(even) {
