--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @import-normalize;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
+  margin: 20px;
+
   font-family: Arial, Helvetica, sans-serif;
 }
 
